# TPS

./: .gitignore  main.py  requirements.txt
Dj_TPS/: Dockerfile  cronjobs  docker-compose.yml  fastbot.py  init-letsencrypt.sh  job_fin_stats.sh  job_sal_calc.sh  job_sal_weekly.sh  manage.py  pyproject.toml  rebuild_tps.sh  tps_backup.sh  tps_db_sketches.sql
Dj_TPS/Dj_TPS/: asgi.py  settings.py  urls.py  wsgi.py
Dj_TPS/docker/nginx/: nginx.conf
Dj_TPS/tph_system/: admin.py  apps.py  filters.py  forms.py  funcs.py  middleware.py  models.py  serializers.py  signals.py  tables.py  tasks.py  tph_urls.py  views.py
Dj_TPS/tph_system/migrations/: 0001_initial.py  0002_alter_sales_photo_count.py  0002_alter_schedule_unique_together.py  0002_cashwithdrawn_week_beg_rec_store_store_status_and_more.py  0002_consumables_paymenttype_positions_saletype_store_and_more.py  0002_salary_cnt_logs.py  0002_staff_dism_status.py  0003_alter_paymenttype_name_alter_positions_name_and_more.py  0003_alter_sales_payment_type.py  0003_cashwithdrawn_week_beg_rec_store_store_status_and_more.py  0003_workvacschedule.py  0004_alter_sales_payment_type_alter_schedule_position_and_more.py  0004_alter_sales_sale_type_checkreports.py  0004_alter_workvacschedule_unique_together.py  0004_cashstore_unique_store_daily.py  0005_alter_checkreports_comments.py  0005_alter_workvacschedule_staff_wrk_status_and_more.py  0005_delete_consumables.py  0006_alter_cashwithdrawn_options_and_more.py  0006_checkreports_date_created_checkreports_date_upd_and_more.py  (+29 more)
Dj_TPS/users/: form.py  urls.py  views.py
(+96 files in other folders)
